--- a/app/views/accounts/_accountable_group.html.erb
+++ b/app/views/accounts/_accountable_group.html.erb
@@ -50,16 +50,18 @@
       <% end %>
     </div>
 
-    <div class="my-2">
-      <%= render DS::Link.new(
-      href: new_polymorphic_path(account_group.key, step: "method_select"),
-      text: "New #{account_group.name.downcase.singularize}",
-      icon: "plus",
-      full_width: true,
-      variant: "ghost",
-      frame: :modal,
-      class: "justify-start"
-    ) %>
-    </div>
+    <% unless account_group.accountable_type == DirectBankAccount %>
+      <div class="my-2">
+        <%= render DS::Link.new(
+        href: new_polymorphic_path(account_group.key, step: "method_select"),
+        text: "New #{account_group.name.downcase.singularize}",
+        icon: "plus",
+        full_width: true,
+        variant: "ghost",
+        frame: :modal,
+        class: "justify-start"
+      ) %>
+      </div>
+    <% end %>
   <% end %>
 </div>
