--- a/app/views/settings/_settings_nav.html.erb
+++ b/app/views/settings/_settings_nav.html.erb
@@ -23,6 +23,7 @@ nav_sections = [
   {
     header: t(".advanced_section_title"),
     items: [
+      { label: t(".ai_settings_label"), path: settings_ai_path, icon: "brain" },
       { label: t(".ai_prompts_label"), path: settings_ai_prompts_path, icon: "bot" },
       { label: t(".api_keys_label"), path: settings_api_key_path, icon: "key" },
       { label: t(".self_hosting_label"), path: settings_hosting_path, icon: "database", if: self_hosted? },
