update to "Sure AI"

--- a/app/views/messages/_chat_form.html.erb
+++ b/app/views/messages/_chat_form.html.erb
@@ -16,12 +16,12 @@
                   rows: 1 %>
 
     <div class="flex items-center justify-between gap-1">
-      <div class="items-center gap-1 hidden lg:flex">
+      <%# <div class="items-center gap-1 hidden lg:flex"> %>
         <%# These are disabled for now, but in the future, will all open specific menus with their own context and search %>
-        <% ["plus", "command", "at-sign", "mouse-pointer-click"].each do |icon| %>
-          <%= icon(icon, as_button: true, disabled: true, class: "cursor-not-allowed", title: "Coming soon") %>
-        <% end %>
-      </div>
+        <%# <% ["plus", "command", "at-sign", "mouse-pointer-click"].each do |icon| %>
+          <%# <%= icon(icon, as_button: true, disabled: true, class: "cursor-not-allowed", title: "Coming soon") %>
+        <%# <% end %>
+      <%# </div> %>
 
       <%= icon("arrow-up", as_button: true, type: "submit") %>
     </div>
