--- a/app/views/enable_banking_items/_enable_banking_item.html.erb
+++ b/app/views/enable_banking_items/_enable_banking_item.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (enable_banking_item:) %>
 
 <%= tag.div id: dom_id(enable_banking_item) do %>
-  <details open class="group bg-container p-4 shadow-border-xs rounded-xl">
+  <details open class="group bg-container p-4 shadow-border-xs">
     <summary class="flex items-center justify-between gap-2 focus-visible:outline-hidden">
       <div class="flex items-center gap-4">
 
