--- a/app/views/enable_banking_items/_new_connection_form.html.erb
+++ b/app/views/enable_banking_items/_new_connection_form.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (enable_banking_item:) %>
 
 <div data-controller="enable-banking-connection">
-  <%= styled_form_with url: authorization_enable_banking_items_path, method: :post, local: false, id: "authorization-form", data: { controller: "authorization-form" }, class: "space-y-4" do |f| %>
+  <%= styled_form_with url: authorization_enable_banking_items_path, method: :post, local: false, class: "space-y-4" do |f| %>
     <section class="space-y-4">
       <% if enable_banking_item.errors.any? %>
         <%= render "shared/form_errors", model: enable_banking_item %>
