--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -134,10 +134,16 @@
 
     <%# DESKTOP - Right sidebar %>
     <%= tag.div class: class_names(
-          "hidden lg:block h-full overflow-y-auto shrink-0 max-w-[400px] transition-all duration-300",
+            "hidden lg:block h-full overflow-y-auto shrink-0 resizable-container border-l border-tertiary ",
           Current.user.show_ai_sidebar? ? expanded_sidebar_class : collapsed_sidebar_class,
         ),
-        data: { app_layout_target: "rightSidebar" } do %>
+        data: { 
+          app_layout_target: "rightSidebar",
+          controller: "resizable",
+          resizable_target: "element",
+          resizable_min_width_value: 250,
+          resizable_storage_key_value: "chat-sidebar-width"
+        } do %>
       <%= tag.div id: "chat-container", class: "relative h-full", data: { controller: "chat hotkey", turbo_permanent: true } do %>
         <div class="flex flex-col h-full justify-between shrink-0">
           <%= turbo_frame_tag chat_frame, src: chat_view_path(@chat), loading: "lazy", class: "h-full" do %>
