--- a/app/views/enable_banking_items/_new_connection_form.html.erb
+++ b/app/views/enable_banking_items/_new_connection_form.html.erb
@@ -1,7 +1,9 @@
 <%# locals: (enable_banking_item:) %>
-
+<% if params[:redirect_uri] %>
+  <meta name="turbo-visit-control" content="reload">
+<% end %>
 <div data-controller="enable-banking-connection">
-  <%= styled_form_with url: authorization_enable_banking_items_path, method: :post, local: false, class: "space-y-4" do |f| %>
+  <%= styled_form_with url: authorization_enable_banking_items_path, method: :post, data: { turbo: false }, local: false, class: "space-y-4" do |f| %>
     <section class="space-y-4">
       <% if enable_banking_item.errors.any? %>
         <%= render "shared/form_errors", model: enable_banking_item %>
