Add: language support for dashboard (EN & FR)

--- a/app/views/pages/dashboard/_no_accounts_graph_placeholder.html.erb
+++ b/app/views/pages/dashboard/_no_accounts_graph_placeholder.html.erb
@@ -5,10 +5,10 @@
       icon: "layers",
     ) %>
 
-    <p class="text-sm font-medium text-primary">No accounts yet</p>
-    <p class="text-secondary text-sm">Add accounts to display net worth data</p>
+    <p class="text-sm font-medium text-primary"><%= t(".no_account_yet") %></p>
+    <p class="text-secondary text-sm"><%= t(".add_account_to_display") %></p>
     <%= render DS::Link.new(
-      text: "Add account",
+      text: t(".new"),
       icon: "plus",
       href: new_account_path,
       frame: :modal
