Add centralized branding helpers and update locales

--- a/app/views/password_mailer/password_reset.html.erb
+++ b/app/views/password_mailer/password_reset.html.erb
@@ -1,4 +1,4 @@
-<p><%= t(".request_made") %></p>
+<p><%= t(".request_made", brand: brand_name) %></p>
 
 <p><%= link_to t(".cta"), edit_password_reset_url(token: params[:token]) %></p>
 
