More rebranding to Sure

--- a/app/views/onboardings/trial.html.erb
+++ b/app/views/onboardings/trial.html.erb
@@ -65,7 +65,7 @@
       <div class="space-y-12">
         <div class="space-y-1.5 text-sm">
           <p class="text-primary font-medium">Today</p>
-          <p class="text-secondary">You'll get free access to Maybe for 14 days</p>
+          <p class="text-secondary">You'll get free access to Sure for 14 days</p>
         </div>
 
         <div class="space-y-1.5 text-sm">
