--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -174,14 +174,13 @@
   }
 }
 
-.invite_code .hidden { display: none !important; }
-
 .invite_code [data-clipboard-target="iconDefault"],
 .invite_code [data-clipboard-target="iconSuccess"] {
   transition: opacity 0.2s;
   opacity: 1;
 }
 .invite_code .hidden {
+  display: none !important;
   opacity: 0;
   pointer-events: none;
   position: absolute;
