Use Google styles for log in

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -10,6 +10,8 @@
 
 @import "./simonweb_pickr.css";
 
+@import "./google-sign-in.css";
+
 @layer components {
   .pcr-app{
     position: static !important;
