--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,6 +1,6 @@
 {
-  "name": "<%= j brand_name %>",
-  "short_name": "<%= j brand_name %>",
+  "name": "<%= j product_name %>",
+  "short_name": "<%= j product_name %>",
   "icons": [
     {
       "src": "/logo-pwa.png",
@@ -18,7 +18,7 @@
   "display": "standalone",
   "display_override": ["fullscreen", "minimal-ui"],
   "scope": "/",
-  "description": "<%= j brand_name %> is your personal finance assistant.",
+  "description": "<%= j product_name %> is your personal finance assistant.",
   "theme_color": "#F9F9F9",
   "background_color": "#F9F9F9"
 }
