fix: changed last instances of Maybe's logo

--- a/app/views/onboardings/trial.html.erb
+++ b/app/views/onboardings/trial.html.erb
@@ -14,7 +14,7 @@
 
 <div class="grow flex flex-col gap-12 items-center justify-center">
   <div class="max-w-sm mx-auto flex flex-col items-center">
-    <%= image_tag "logo-color.png", class: "w-16 mb-6" %>
+    <%= image_tag "logomark-color.svg", class: "w-16 mb-6" %>
 
     <p class="text-xl lg:text-3xl text-primary font-display font-medium">
       Try Sure for 14 days.
