--- a/app/views/subscriptions/upgrade.html.erb
+++ b/app/views/subscriptions/upgrade.html.erb
@@ -22,7 +22,7 @@
   </nav>
 
   <div class="grow flex flex-col items-center justify-center">
-    <%= image_tag "logo-color.png", class: "w-16 mb-6" %>
+    <%= image_tag "logomark-color.svg", class: "w-16 mb-6" %>
 
     <% if Current.family.trialing? %>
       <p class="text-xl lg:text-3xl text-primary font-display font-medium">Your trial has <%= Current.family.days_left_in_trial %> days remaining</p>
