--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -93,7 +93,7 @@
         <%= render "transactions/transaction_category", transaction: transaction %>
       </div>
 
-      <div class="lg:col-span-2 col-span-4 ml-auto text-right">
+      <div class="col-span-4 lg:col-span-2 ml-auto text-right">
         <%= content_tag :p,
             transaction.transfer? && view_ctx == "global" ? "+/- #{format_money(entry.amount_money.abs)}" : format_money(-entry.amount_money),
             class: ["text-green-600": entry.amount.negative?] %>
