--- a/app/views/onboardings/goals.html.erb
+++ b/app/views/onboardings/goals.html.erb
@@ -16,7 +16,7 @@
   <div>
     <div class="space-y-1 mb-6 text-center">
       <h1 class="text-2xl font-medium md:text-2xl">What brings you here?</h1>
-      <p class="text-secondary text-sm">Select one or more goals that you have with using Sure as your personal finance tool.</p>
+      <p class="text-secondary text-sm">Select one or more goals that you have with using <%= product_name %> as your personal finance tool.</p>
     </div>
 
     <%= form_with model: @user do |form| %>
