Revert "Copy of fix(ui): iOS PWA should take full screen height #2391"
This reverts commit f9b0bab9296620981b818ed8a989df6480910d73.

--- a/app/assets/tailwind/maybe-design-system.css
+++ b/app/assets/tailwind/maybe-design-system.css
@@ -267,7 +267,7 @@
   }
 
   html {
-    margin-top: env(safe-area-inset-top);
+    padding-top: env(safe-area-inset-top);
     padding-bottom: env(safe-area-inset-bottom);
   }
 
