--- a/app/views/transactions/_transaction_category.html.erb
+++ b/app/views/transactions/_transaction_category.html.erb
@@ -4,6 +4,6 @@
   <% if transaction.transfer&.categorizable? || transaction.transfer.nil? %>
     <%= render "categories/menu", transaction: transaction %>
   <% else %>
-    <%= render "categories/badge", category: transaction.transfer&.payment? ? payment_category :  transfer_category %>
+    <%= render "categories/badge", category: transaction.transfer&.payment? ? payment_category : transfer_category, icon_only: true %>
   <% end %>
 </div>
