Adjusted column layout

--- a/app/views/entries/_entry_group.html.erb
+++ b/app/views/entries/_entry_group.html.erb
@@ -21,7 +21,7 @@
       </div>
     <% end %>
   </div>
-  <div class="rounded-lg grid grid-cols-[minmax(0,1fr)_auto] bg-container shadow-border-xs">
+  <div class="rounded-lg grid grid-cols-[minmax(0,1fr)_auto_auto] bg-container shadow-border-xs">
     <%= content %>
   </div>
 </div>
